# quarter-3

02_chainlit_chatbot/: main.py  pyproject.toml
project-01/: app.py
project-02/: app.py
project_03/: library.txt  library_manager.py  pyproject.toml  tempCodeRunnerFile.py
project_04/projects_to_be_submitted/: pyproject.toml
project_04/projects_to_be_submitted/01_madlib/: madlib.py
project_04/projects_to_be_submitted/02_guess_the_number_game_computer/: computer_game.py
project_04/projects_to_be_submitted/03_guess_the_number_game_user/: guess_the_number.py
project_04/projects_to_be_submitted/04_rock_paper_scrissor/: game.py
project_04/projects_to_be_submitted/05_hangman/: hangman.py
project_04/projects_to_be_submitted/06_countdown_timer/: main.py
project_04/projects_to_be_submitted/07_password_generator/: main.py
project_04/projects_to_be_submitted/08_streamlit-bmi-calculator/: main.py
project_05/: main.py  pyproject.toml
project_06/: 01_using_self.py  02_using_cls.py  03_public_variables_and_methods.py  04_Class_Variables_and_Class_Methods.py  05_Static_Variables_and_Static_Methods.py  06_Constructors_and_Destructors.py  07_Access_Modifiers_Public_Private_and_Protected.py  08_The_super_Function.py  09_Abstract_Classes_and_Methods.py  10_Instance_Methods.py  11_ Class_Methods.py  12_Static_Methods.py  13_Composition.py  14_Aggregation.py  15_Method_Resolution_Order_and_Diamond_Inheritance.py  16_Function_Decorators.py  17_Class_Decorators.py  18_Property_Decorators.py  19_callable()_and__call__().py  20_Creating_a_Custom_Exception.py  (+1 more)
(+74 files in other folders)
